<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="id.co.horveno.testgits.view.activity.AddDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/uploadToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ImageView
            android:id="@+id/img_upload"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:onClick="requestImage"
            android:scaleType="centerCrop"
            android:src="@drawable/upload" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_judul"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                app:met_baseColor="@android:color/black"
                app:met_errorColor="@color/error_input"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_category_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_category"
                android:inputType="text"
                android:onClick="chooseCategory"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                app:met_baseColor="@android:color/black"
                app:met_errorColor="@color/error_input"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_location_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_location"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                app:met_baseColor="@android:color/black"
                app:met_errorColor="@color/error_input"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_description_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                app:met_baseColor="@android:color/black"
                app:met_errorColor="@color/error_input"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorOrange"
                android:text="@string/action_addData"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
